<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cxt_test"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/theme_title"
        android:textColor="#222222"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/theme_subtitle"
        android:textColor="#555555"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/theme_tip"
        android:textColor="#666666"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:text="this is no refresh view update UI"
        android:textSize="@dimen/cxf_normal"
        android:textColor="@color/cxt_test" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@mipmap/cxt_server" />

    <Button
        android:textSize="@dimen/cxf_normal"
        android:id="@+id/fontSize"
        android:onClick="onClick"
        android:text="@string/btn_increase_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:textSize="@dimen/cxf_normal"
        android:id="@+id/restoreFont"
        android:onClick="onClick"
        android:text="@string/btn_restore_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:textSize="@dimen/cxf_normal"
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_change_theme" />

    <Button
        android:textSize="@dimen/cxf_normal"
        android:onClick="onClick"
        android:id="@+id/restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_restore_theme" />


</LinearLayout>
